# python-edi

./: .gitignore  README.md  pyproject.toml  setup.py
pythonedi/: EDIGenerator.py  EDIParser.py  EDIValidator.py  __init__.py  debug.py  supported_formats.py  utils.py
pythonedi/formats/: 810.json  812.json  850.json  855.json  856.json  997.json  CTP.json  CTT.json  DTM.json  FOB.json  GE.json  GS.json  IEA.json  ISA.json  ITD.json  LIN.json  L_CTT.json  L_IT1.json  L_PID.json  L_SAC.json  MSG.json  N1.json  N2.json  N3.json  N4.json  N9.json  PER.json  PID.json  PO1.json  PO3.json  PO4.json  REF.json  SAC.json  SDQ.json  SE.json
pythonedi/formats/codes/: ID100.json  ID1005.json  ID105.json  ID107.json  ID1073.json  ID128.json  ID1300.json  ID133.json  ID143.json  ID234.json  ID236.json  ID248.json  ID26.json  ID305.json  ID331.json  ID336.json  ID349.json  ID353.json  ID355.json  ID363.json  ID365.json  ID366.json  ID368.json  ID374.json  ID426.json  ID441.json  ID478.json  ID479.json  ID480.json  ID559.json  ID587.json  ID639.json  ID640.json  ID641.json  ID66.json  ID662.json  ID668.json  ID687.json  ID716.json  ID718.json  (+11 more)
test/: test_parse_edi.py
