[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PythonEDI"
dynamic = ["version", "dependencies", "classifiers", "keywords", "authors", "license", "readme"]

[tool.setuptools_scm]
# Configuration options can go here if needed, default is often sufficient
